# hjtpx-new

./: .env.production  .gitignore  SENTRY_CONFIG.md  demo-versioning.js  dump.rdb  jest.config.js  package-lock.json  package.json  playwright.config.js  test-report.md  test-versioning-simple.js  test_api_comprehensive.js  全自动开发测试模式总结.md  完整测试报告.md  开发核心.md  新阶段开发任务清单.md
.github/workflows/: ci.yml
.trae/specs/: checklist.md  spec.md  tasks.md
.trae/specs/admin-optimization/: checklist.md  spec.md  tasks.md
.trae/specs/automated-development-plan/: checklist.md  spec.md  tasks.md
.trae/specs/hjtpx-phase5-tasks/: checklist.md  spec.md  tasks.md
captchax/: CHANGELOG.md  CONTRIBUTING.md  README.md  coverage.html  go.mod  go.sum  initial_benchmark.txt  optimized_benchmark.txt
captchax/cmd/server/: main.go
captchax/config/: config.go  config.yaml
captchax/docs/: API.md  DEPLOY.md  I18N.md  OPS.md  SDK.md  openapi.yaml
captchax/examples/: README.md
captchax/internal/admin/: handlers.go  routes.go
captchax/internal/api/: handlers.go  handlers_test.go  routes.go
captchax/internal/async/: callback.go  callback_benchmark_test.go
captchax/internal/risk/: hmm.go  (+6 more)
captchax/migrations/: 002_optimize_indexes.sql  003_partition_tables.sql  004_cold_hot_separation.sql  005_archiving_strategy.sql  006_optimize_queries.sql  007_read_write_split.sql  008_monitoring_metrics.sql
captchax/sdk/python/: .coverage  TESTING.md  coverage.xml  pyproject.toml  test_summary.txt
captchax/sdk/python/src/captchax/: __init__.py  client.py  types.py
captchax/sdk/python/src/captchax_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
captchax/sdk/python/tests/: test_captchax.py  test_concurrency.py  test_error_handling.py  test_integration.py  test_mock.py  test_types.py  test_unit.py
captchax/tests/: TEST_REPORT.md  generate_report.go
config/: .env.example
config/database/: db.js
config/elasticsearch/: connection.js  index-manager.js
config/redis/: client.js
docs/: API_VERSIONING.md  BACKUP_RESTORE.md  MIGRATIONS.md  MIGRATION_GUIDE.md  cache-optimization-report.md  frontend-performance-optimization-report.md  optimization-report.md  v1-migration-guide.md  开发计划_下一阶段.md
docs/database/: design-standards.md  index-optimization.md  migration-guide.md  schema.md
docs/privacy/: ARCHITECTURE.md
docs/versions/: changes-1.0.0.json  openapi-1.0.0-2026-05-14T22-10-14-186Z.json
logs/: backup_verification_report_20260515_125534.json  connection-leaks.json
migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_roles_permissions.down.sql  002_roles_permissions.up.sql  003_notifications.down.sql  003_notifications.up.sql  004_login_history.down.sql  004_login_history.up.sql  005_performance_indexes.sql  005_presence.down.sql  005_presence.up.sql  006_analytics.down.sql  006_analytics.up.sql  007_create_analytics.sql  007_security.down.sql  007_security.up.sql  008_create_csrf_tokens.sql  008_migration_tracking.down.sql  008_migration_tracking.up.sql  010_api_keys.down.sql  010_api_keys.up.sql  010_collaboration_presence.down.sql  010_collaboration_presence.up.sql  011_usage_records.down.sql  011_usage_records.up.sql  012_webhooks.down.sql  012_webhooks.up.sql
mobile/: .eslintrc.js  .gitignore  .prettierrc  App.tsx  app.json  package.json  tsconfig.json
scripts/: backup.sh  branch-coverage-check.js  check-api-changes.js  coverage-alert.js  coverage-analyzer.js  elasticsearch-setup.sh  generate-db-docs.js  generate-swagger.js  index-maintenance.js  migrate.js  restore-drill.sh  restore.sh  run-migrations.js  sync-data.js  trend-report.js  validate-swagger.js  verify-backup.sh
scripts/backup-config/: README.md  crontab.example  hjtpx-backup-full.service  hjtpx-backup-full.timer  hjtpx-backup-incremental.service  hjtpx-backup-incremental.timer  hjtpx-restore-drill.service  hjtpx-restore-drill.timer  hjtpx-verify-backups.service  hjtpx-verify-backups.timer
scripts/deployment/: deploy.sh  health-check.sh  rollback.sh
src/: index.js
src/api-gateway/: index.js  server.js  server.test.js
src/frontend/: .eslintrc.cjs  index.html  index.js  package-lock.json  package.json  playwright.config.js  vite.config.js
src/microservices/: apiGateway.js  grpc-communication.js  serviceRegistry.js
src/privacy/: differential-privacy.js  federated-learning.js  homomorphic-encryption.js  index.js  privacy-audit.js  secure-mpc.js
test-screenshots/: settings.html
tests/: setup.js
tests/__mocks__/: database.js  redis.js
tests/a11y/: components.test.js
tests/api/: versioning.test.js
tests/performance/: loadTester.js  runTests.js
tests/security/: SECURITY_TEST_REPORT.md  csp-enhanced.test.js  helmet.test.js  npm-audit.test.js  penetration_test.js
tests/websocket/: README.md  package-lock.json  package.json  test-broadcast.js  test-connections.js  test-monitor.js
(+922 files in other folders)
