[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "captchax-sdk"
version = "1.0.0"
description = "CaptchaX Multi-language SDK - Python client for CaptchaX verification service"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "CaptchaX Team"}
]
keywords = ["captcha", "verification", "slider", "click", "puzzle", "security"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.9.0",
    "types-requests>=2.31.0",
]
async = [
    "httpx[http2]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/hjtpx/captchax"
Documentation = "https://github.com/hjtpx/captchax/blob/main/docs/SDK.md"
Repository = "https://github.com/hjtpx/captchax"
Issues = "https://github.com/hjtpx/captchax/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
captchax = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["captchax"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
